--- a/README
+++ b/README
@@ -5,3 +5,5 @@ Each section has led tubes that light up in order to create animation
 Middle section (death star) has 4x2 = 8 scrolling LED screens displaying default ASCII text, with ability to customize through webiste. LED tube animations can also be controlled from website (always on, always off, or animated)
 
 Default state = leds on, default ASCII scrolling text.
+
+LED tubes are controlled by an Arduino. Raspberry Pi sets state of LED animations by setting GPIO pins 1/0 as an input to Arduino. Arduino checks input pins state and animates tubes accordingly.
